# IntelGraphx-AI

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  init_db.py  main.py  pyproject.toml  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py
backend/app/agents/: evaluator.py  forecast.py  graph.py  nodes.py  pattern.py  state.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: alerts.py  auth.py  chat.py  competitors.py  pipeline.py  predictions.py  reports.py
backend/app/core/: config.py  database.py  scheduler.py  security.py
backend/app/models/: __init__.py  alert.py  competitor.py  hash.py  prediction.py  report.py  user.py
backend/app/schemas/: __init__.py  alert.py  competitor.py  hash.py  prediction.py  report.py  user.py
backend/app/services/: email_service.py  news.py  report_generator.py  scraper.py  vector_store.py
backend/app/templates/: alert.html  report.html
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Alerts.jsx  Chat.jsx  Competitors.jsx  Dashboard.jsx  Landing.jsx  Predictions.jsx  Reports.jsx  Settings.jsx
