[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.2",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.138.0",
    "fastapi-mail>=1.6.5",
    "greenlet>=3.5.2",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=0.0.65",
    "langsmith>=0.1.81",
    "passlib>=1.7.4",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "ragas>=0.2.0",
    "langchain-google-vertexai",
    "datasets>=2.20.0",
    "reportlab>=5.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "apscheduler>=3.11.2",
]
